applications/openlookeng-jenkins/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/custom-http-errors: "404"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location /script {
        return 403;
      }
  name: openlookeng-jenkins-ingress
  namespace: openlookeng-jenkins
spec:
  tls:
    - hosts:
        - build.openlookeng.io
      secretName: openlookeng-jenkins-new-tls
  rules:
    - host: build.openlookeng.io
      http:
        paths:
          - backend:
              serviceName: oauth2-proxy
              servicePort: 4180
            path: /
